--- a/radio-operator-toolbox-angular/src/app/components/vigenere-page/vigenere-page.component.html
+++ b/radio-operator-toolbox-angular/src/app/components/vigenere-page/vigenere-page.component.html
@@ -1,19 +1,38 @@
 <div>
-    VIIGENERE
     <div class="p-2">
-        <label *ngIf="isEncoding" for="exampleFormControlInput1" class="form-label">Tekst do zakodowania</label>
-        <label *ngIf="!isEncoding" for="exampleFormControlInput1" class="form-label">Odkodowany tekst</label>
-        <div class="input-group mb-3">
-            <input [(ngModel)]="textDecoded" type="text" class="form-control" placeholder="kodowany tekst"
-                pattern="[0-9]" aria-label="textDecoded" aria-describedby="basic-addon1" (change)="encodeText()"
-                (keyup)="encodeText()">
+        <div>
+            <label *ngIf="isEncoding" for="exampleFormControlInput1" class="form-label">Tekst do zakodowania</label>
+            <label *ngIf="!isEncoding" for="exampleFormControlInput1" class="form-label ">Odkodowany tekst</label>
+            <div class="input-group mb-3">
+                <input [(ngModel)]="textDecoded" type="number" class="form-control" placeholder="kodowany tekst"
+                    pattern="[0-9]" aria-label="textDecoded" aria-describedby="basic-addon1" (change)="encodeText()"
+                    (keyup)="encodeText()">
+            </div>
         </div>
 
-        <label *ngIf="isEncoding" for="exampleFormControlInput1" class="form-label">Zakodowany tekst</label>
-        <label *ngIf="!isEncoding" for="exampleFormControlInput1" class="form-label">Tekst do zdekodowania</label>
-        <div class="input-group mb-3">
-            <input [(ngModel)]="textEncoded" type="text" class="form-control" placeholder="dekodowany tekst"
-                aria-label="textEncoded" aria-describedby="basic-addon1" (change)="decodeText()" (keyup)="decodeText()">
+        <div>
+            <label *ngIf="isEncoding" for="exampleFormControlInput1" class="form-label">Tekst do zakodowania</label>
+            <label *ngIf="!isEncoding" for="exampleFormControlInput1" class="form-label ">Odkodowany tekst</label>
+            <div class="input-group mb-3">
+                <textarea [(ngModel)]="textDecoded" aria-label="asads" class="form-control" name="asd" id="asdas2"
+                    rows="3" placeholder="kodowany tekst"></textarea>
+            </div>
+        </div>
+
+
+        <div>
+            <label *ngIf="isEncoding" for="exampleFormControlInput1" class="form-label">Zakodowany tekst</label>
+            <label *ngIf="!isEncoding" for="exampleFormControlInput1" class="form-label">Tekst do zdekodowania</label>
+            <div class="input-group mb-3">
+                <input [(ngModel)]="textEncoded" type="text" class="form-control" placeholder="dekodowany tekst"
+                    aria-label="textEncoded" aria-describedby="basic-addon1" (change)="decodeText()"
+                    (keyup)="decodeText()">
+            </div>
+        </div>
+
+        <div class="mb-3">
+            <label for="asdasd" class="form-label"></label>
+            <textarea aria-label="asads" class="form-control" name="asd" id="asdas" rows="3"></textarea>
         </div>
     </div>
 
@@ -21,11 +40,11 @@
         <td style="border: solid;">
             <tr>
                 <td></td>
-                <td  style="border: 2px black solid" *ngFor="let i of codeTable; index as k">{{k}}</td>
+                <td style="border: 2px black solid" *ngFor="let i of codeTable; index as k">{{k}}</td>
             </tr>
             <tr *ngFor="let row of codeTable; index as idx">
-                <td  style="border: 2px black solid" >{{idx}}</td>
-                <td  style="border: 2px black solid" *ngFor="let letter of row">{{letter}}</td>
+                <td style="border: 2px black solid">{{idx}}</td>
+                <td style="border: 2px black solid" *ngFor="let letter of row">{{letter}}</td>
             </tr>
         </td>
 
