--- a/radio-operator-toolbox-angular/src/styles.scss
+++ b/radio-operator-toolbox-angular/src/styles.scss
@@ -62,6 +62,9 @@ select {
     color: black;
 }
 
+.form-label{
+    margin-bottom: 0px;
+}
 
 @font-face {
     font-family: 'JetBrainsMono-Medium';
