--- a/radio-operator-toolbox-angular/src/app/components/sarneg-page/sarneg-page.component.html
+++ b/radio-operator-toolbox-angular/src/app/components/sarneg-page/sarneg-page.component.html
@@ -5,7 +5,7 @@
         <label *ngIf="!isEncoding" for="exampleFormControlInput1" class="form-label">Odkodowane numery</label>
         <div class="input-group mb-3">
             <input [(ngModel)]="numbersDecoded" type="text" class="form-control font-monospace"
-                placeholder="kodowane numery" pattern="[0-9]" aria-label="wordDecoded" aria-describedby="basic-addon1"
+                placeholder="kodowane numery"  aria-label="wordDecoded" aria-describedby="basic-addon1"
                 (change)="encodeWord()" (keyup)="encodeWord()">
         </div>
 
