handle with update codewords

--- a/radio-operator-toolbox-angular/src/app/components/sarneg-page/sarneg-page.component.scss
+++ b/radio-operator-toolbox-angular/src/app/components/sarneg-page/sarneg-page.component.scss
@@ -2,3 +2,12 @@ input {
     text-align: center;
     font-size: 2.8em;
 }
+
+.codeword {
+    text-align: center;
+    font-size: 2em;
+}
+
+.btn-lock {
+    width: 3em;
+}
