--- a/radio-operator-toolbox-angular/src/app/core-components/nav-bar/nav-bar.component.html
+++ b/radio-operator-toolbox-angular/src/app/core-components/nav-bar/nav-bar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar sticky-top navbar-expand-xxl navbar-dark bg-dark justify-content-center">
+<nav class="navbar sticky-top aanavbar-expand-xxl navbar-dark bg-dark justify-content-center">
     <div class="content d-flex justify-content-between flex-wrap">
 
         <div class="navbar-brand" [routerLink]="'home-tab'">
@@ -21,9 +21,7 @@
                 <img src="assets/imgs/reports-image.png" height="30" alt="">
             </div>
 
-
-
-
+            <!--  -->
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
