--- a/radio-operator-toolbox-angular/src/app/components/sarneg-page/sarneg-page.component.html
+++ b/radio-operator-toolbox-angular/src/app/components/sarneg-page/sarneg-page.component.html
@@ -1,16 +1,16 @@
 <div>
     <div class="p-2">
         <label *ngIf="isEncoding" for="exampleFormControlInput1" class="form-label">Numery do zakodowania (tylko
-            cyfry)</label>
+            cyfry+znaki specjalne)</label>
         <label *ngIf="!isEncoding" for="exampleFormControlInput1" class="form-label">Odkodowane numery</label>
         <div class="input-group mb-3">
             <input [(ngModel)]="numbersDecoded" type="text" class="form-control font-monospace"
-                placeholder="kodowane numery"  aria-label="wordDecoded" aria-describedby="basic-addon1"
+                placeholder="kodowane numery" aria-label="wordDecoded" aria-describedby="basic-addon1"
                 (change)="encodeWord()" (keyup)="encodeWord()">
         </div>
 
         <label *ngIf="isEncoding" for="exampleFormControlInput1" class="form-label">Zakodowane numery (tylko
-            litery)</label>
+            litery+znaki specjalne)</label>
         <label *ngIf="!isEncoding" for="exampleFormControlInput1" class="form-label">Numery do zdekodowania</label>
         <div class="input-group mb-3">
             <input [(ngModel)]="numbersEncoded" type="text" class="form-control font-monospace"
@@ -19,21 +19,71 @@
         </div>
     </div>
 
+    <!--  -->
+    <!--  -->
+    <!--  -->
+    <!--  -->
+    <!--  -->
+    <!--  -->
+    <!--  -->
+    <!--  -->
+    <!--  -->
+    <!--  -->
+    <!--  -->
+    <!--  -->
 
 
 
-    <div class="d-grid gap-1 p-2">
-        <div class="">Active Codeword:</div>
-        <button type="button" name="{{currentCodeWord}}" id="{{currentCodeWord}}"
-            class="btn btn-primary font-monospace">
-            <b>{{currentCodeWord}}</b>
-        </button>
+
+
+    <div class="p-2 mb-3">
+        <label for="validationCustom01" class="form-label">Active Codeword:</label>
+
+        <div class="d-flex">
+            <div class="input-group">
+                <input [(ngModel)]="newCurrentCodeWord" type="text"
+                    class="form-control codeword font-monospace has-validation" id="validationCustom01"
+                    placeholder="aktywne słowo kodowe" aria-label="currentCodeWord" aria-describedby="basic-addon1"
+                    disabled="{{isCurrentCodeWordLocked}}" (change)="updateCodeword()" (keyup)="updateCodeword()">
+            </div>
+
+            <button *ngIf="!isValidCodeword()" type="button" name="btn-lock" id="btn1"
+                class="btn btn-danger font-monospace btn-lock">
+                <i class="fas fa-exclamation-triangle    "></i>
+            </button>
+
+            <button *ngIf="!isCurrentCodeWordLocked" type="button" name="btn-lock" id="btn-lock"
+                class="btn btn-warning font-monospace btn-lock" (click)="toggleCodewordLock()">
+                <i class="fas fa-lock-open"></i>
+            </button>
+            <button *ngIf="isCurrentCodeWordLocked" type="button" name="btn-lock-open" id="btn-lock-open"
+                class="btn btn-success font-monospace btn-lock" (click)="toggleCodewordLock()">
+                <i class="fas fa-lock"></i>
+            </button>
+        </div>
+        <small class="invalid-input" *ngIf="!isValidCodeword()">
+            10 niepowtarzajacych sie liter.
+        </small>
     </div>
+
+
+
+
+    <!--  -->
+    <!--  -->
+    <!--  -->
+    <!--  -->
+    <!--  -->
+    <!--  -->
+    <!--  -->
+    <!--  -->
+    <!--  -->
+    <!--  -->
 
     <div class="d-grid gap-1 p-2">
         <div>Codewords:</div>
         <button *ngFor="let item of codeWords" type="button" name="{{item}}" id="{{item}}"
-            class="btn btn-outline-secondary font-monospace" (click)="changeCodeword(item)">
+            class="btn btn-outline-secondary font-monospace" (click)="setCodeword(item)">
             {{item}}
         </button>
     </div>
