--- a/radio-operator-toolbox-angular/src/app/components/report-page/report-page.component.html
+++ b/radio-operator-toolbox-angular/src/app/components/report-page/report-page.component.html
@@ -1,4 +1,51 @@
-<p>report-page works!</p>
+<p>{{report.name}}</p>
+
+
+<div class="input-group mb-3">
+    <span class="input-group-text col-1 text-wrap p-1" id="inputGroup-sizing-default1">Line 1</span>
+    <span class="input-group-text col-5 text-wrap p-1" id="inputGroup-sizing-default2">desc: Location pickup site</span>
+    <div class="input-group-text d-flex col-6">
+        <small class="" id="inputGroup-sizing-default2 m-1">MGRS</small>
+        <input type="text" class="form-control " aria-label="Default" aria-describedby="inputGroup-sizing-default">
+    </div>
+</div>
+
+<div class="input-group mb-3">
+    <span class="input-group-text col-1 text-wrap" id="inputGroup-sizing-default1">Line 2</span>
+    <span class="input-group-text col-5 text-wrap" id="inputGroup-sizing-default2">desc: freq and my callsign at pickup site</span>
+    <div class="input-group-text d-flex col-6 value">
+        <small class="" id="inputGroup-sizing-default2">freq</small>
+        <input type="text" class="form-control " aria-label="Default" aria-describedby="inputGroup-sizing-default">
+        <small class="" id="inputGroup-sizing-default2">callsign</small>
+        <input type="text" class="form-control " aria-label="Default" aria-describedby="inputGroup-sizing-default">
+    </div>
+</div>
+
+<div class="input-group mb-3">
+    <span class="input-group-text col-1 text-wrap" id="inputGroup-sizing-default1">Line 3</span>
+    <span class="input-group-text col-5 text-wrap" id="inputGroup-sizing-default2">desc: freq and my callsign at pickup site</span>
+    <div class="input-group-text d-flex col-6 value">
+        <small class="" id="inputGroup-sizing-default2">freq</small>
+        <input type="text" class="form-control " aria-label="Default" aria-describedby="inputGroup-sizing-default">
+        <small class="" id="inputGroup-sizing-default2">callsign</small>
+        <input type="text" class="form-control " aria-label="Default" aria-describedby="inputGroup-sizing-default">
+    </div>
+</div>
+
+<div class="input-group mb-3">
+    <span class="input-group-text " id="inputGroup-sizing-default1">Line2</span>
+    <span class="input-group-text " id="inputGroup-sizing-default2">Freq and callsign at pickup site MGRS</span>
+    <input type="text" class="form-control " aria-label="Default" aria-describedby="inputGroup-sizing-default">
+</div>
+
+
+
+<div class="input-group">
+    <span class="input-group-text" id="">First and last name</span>
+    <input type="text" class="form-control">
+    <input type="text" class="form-control">
+</div>
+
 <p>report-page works!</p>
 <p>report-page works!</p>
 <p>report-page works!</p>
