--- a/radio-operator-toolbox-angular/src/app/core-components/nav-bar/nav-bar.component.html
+++ b/radio-operator-toolbox-angular/src/app/core-components/nav-bar/nav-bar.component.html
@@ -2,9 +2,8 @@
     <div class="content d-flex justify-content-between flex-wrap">
 
         <div class="navbar-brand" [routerLink]="'home-tab'">
-            <!-- <img src="/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" alt=""> -->
-            <img src="https://cdn.iconscout.com/icon/premium/png-256-thumb/shoot-2801222-2321882.png?f=webp" width="30"
-                height="30" alt="">
+            <img src="https://cdn.iconscout.com/icon/premium/png-256-thumb/shoot-2801222-2321882.png?f=webp" height="30"
+                alt="">
         </div>
 
         <div class="d-flex align-items-center">
@@ -14,7 +13,7 @@
             </div>
             <div class="mx-2" [routerLink]="'vigenere-page'">
                 <!-- <img src="/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" alt=""> -->
-                <img src="assets/imgs/vigenere-image.png" width="30" height="30" alt="">
+                <img src="assets/imgs/vigenere-image.png" height="30" height="30" alt="">
             </div>
             <div class="mx-2" [routerLink]="'reports-page'">
                 <!-- <img src="/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" alt=""> -->
