--- a/radio-operator-toolbox-angular/src/app/tabs/home-tab/home-tab.component.html
+++ b/radio-operator-toolbox-angular/src/app/tabs/home-tab/home-tab.component.html
@@ -1,14 +1,14 @@
-<div class="row justify-content-md-center">
+<div class="d-flex">
     <div class="col-6 ">
         <app-menu-tile [name]="'sarneg'" [routerLink]="[ '/sarneg-page']"></app-menu-tile>
     </div>
     <div class="col-6 ">
         <app-menu-tile [name]="'vigenere'" [routerLink]="[ '/vigenere-page']"></app-menu-tile>
     </div>
-<!-- </div> -->
+</div>
 
 
-<!-- <div class="row justify-content-md-center"> -->
+<div class="row">
     <div class="col-6 ">
         <app-menu-tile [name]="'reports'"></app-menu-tile>
     </div>
