--- a/radio-operator-toolbox-angular/src/app/components/report-page/report-page.component.html
+++ b/radio-operator-toolbox-angular/src/app/components/report-page/report-page.component.html
@@ -41,34 +41,7 @@
 
 
 <div class="input-group">
-    <span class="input-group-text" id="">First and last name</span>
-    <input type="text" class="form-control">
-    <input type="text" class="form-control">
+    <label class="input-group-text" id="">First and last name</label>
+    <input type="text" placeholder="a" class="form-control" id="ss1" name="1">
+    <input type="text" placeholder="a" class="form-control" id="ss2" name="2">
 </div>
-
-<p>report-page works!</p>
-<p>report-page works!</p>
-<p>report-page works!</p>
-<p>report-page works!</p>
-<p>report-page works!</p>
-<p>report-page works!</p>
-<p>report-page works!</p>
-<p>report-page works!</p>
-<p>report-page works!</p>
-<p>report-page works!</p>
-<p>report-page works!</p>
-<p>report-page works!</p>
-<p>report-page works!</p>
-<p>report-page works!</p>
-<p>report-page works!</p>
-<p>report-page works!</p>
-<p>report-page works!</p>
-<p>report-page works!</p>
-<p>report-page works!</p>
-<p>report-page works!</p>
-<p>report-page works!</p>
-<p>report-page works!</p>
-<p>report-page works!</p>
-<p>report-page works!</p>
-<p>report-page works!</p>
-<p>report-page works!</p>
