--- a/radio-operator-toolbox-angular/src/app/core-components/nav-bar/nav-bar.component.html
+++ b/radio-operator-toolbox-angular/src/app/core-components/nav-bar/nav-bar.component.html
@@ -2,6 +2,8 @@
     <div class="content d-flex justify-content-between flex-wrap">
 
         <div class="navbar-brand" [routerLink]="'home-tab'">
+            <img src="https://cdn.iconscout.com/icon/premium/png-256-thumb/shoot-2801222-2321882.png?f=webp" height="30"
+                alt="">
             <img src="assets/imgs/app-icon.png" height="30" alt="">
         </div>
 
@@ -12,7 +14,7 @@
             </div>
             <div class="mx-2" [routerLink]="'vigenere-page'">
                 <!-- <img src="/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" alt=""> -->
-                <img src="assets/imgs/vigenere-image.png" width="30" height="30" alt="">
+                <img src="assets/imgs/vigenere-image.png" height="30" alt="">
             </div>
             <div class="mx-2" [routerLink]="'reports-page'">
                 <!-- <img src="/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" alt=""> -->
@@ -36,8 +38,8 @@
                 <li class="nav-item">
                     <a class="nav-link" [routerLink]="'vigenere-page'">kodowanie Vigenere</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" [routerLink]="reportsNames[0]+'vigenere-page'">{{reportsNames[0]}}</a>
+                <li *ngFor="let item of getFavouriteReports()" class="nav-item" (click)="setCurrentReport(item)">
+                    <a class="nav-link" [routerLink]="'report-page'">{{item.name}}</a>
                 </li>
 
 
@@ -69,8 +71,8 @@
                             Wszystkie Raporty
                         </button>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a *ngFor="let item of reportsNames" class="dropdown-item d-flex justify-content-end"
-                                href="#">{{item}}</a>
+                            <a *ngFor="let item of reports" class="dropdown-item d-flex justify-content-end"
+                                [routerLink]="'report-page'">{{item.name}}</a>
                         </div>
                     </div>
                 </li>
