--- a/radio-operator-toolbox-angular/src/app/components/report-page/report-page.component.html
+++ b/radio-operator-toolbox-angular/src/app/components/report-page/report-page.component.html
@@ -1,47 +1,30 @@
 <p>{{report.name}}</p>
 
 
-<div class="input-group mb-3">
-    <span class="input-group-text col-1 text-wrap p-1" id="inputGroup-sizing-default1">Line 1</span>
-    <span class="input-group-text col-5 text-wrap p-1" id="inputGroup-sizing-default2">desc: Location pickup site</span>
-    <div class="input-group-text d-flex col-6">
-        <small class="" id="inputGroup-sizing-default2 m-1">MGRS</small>
-        <input type="text" class="form-control " aria-label="Default" aria-describedby="inputGroup-sizing-default">
+<div *ngFor="let line of report.lines" class="input-group mb-3">
+    <div class="input-group-text col-1 text-wrap line-code" id="inputGroup-sizing-default1">
+        {{line.lineHeader}}</div>
+
+
+    <div class="input-group-text col-11 text-wrap align-content-start d-flex flex-column p-0" id="inputGroup-sizing-default2">
+        <div class="line-desc p-1">
+            <div class="header">{{line.descriptionHeader}}</div>
+            <div *ngFor="let linedesc of line.descriptionLines" class="desc">{{linedesc}}</div>
+        </div>
+
+
+        <div class="d-flex flex-wrap">
+            <div *ngFor="let lineValue of line.lineValues" class="d-flex m-1">
+                <small class="" id="inputGroup-sizing-default2">{{lineValue.label}}</small>
+                <input [(ngModel)]="lineValue.value" type="number" class="form-control value-numeric" aria-label="Default"
+                    aria-describedby="inputGroup-sizing-default">
+            </div>
+        </div>
     </div>
-</div>
 
-<div class="input-group mb-3">
-    <span class="input-group-text col-1 text-wrap" id="inputGroup-sizing-default1">Line 2</span>
-    <span class="input-group-text col-5 text-wrap" id="inputGroup-sizing-default2">desc: freq and my callsign at pickup site</span>
-    <div class="input-group-text d-flex col-6 value">
-        <small class="" id="inputGroup-sizing-default2">freq</small>
-        <input type="text" class="form-control " aria-label="Default" aria-describedby="inputGroup-sizing-default">
-        <small class="" id="inputGroup-sizing-default2">callsign</small>
-        <input type="text" class="form-control " aria-label="Default" aria-describedby="inputGroup-sizing-default">
-    </div>
-</div>
 
-<div class="input-group mb-3">
-    <span class="input-group-text col-1 text-wrap" id="inputGroup-sizing-default1">Line 3</span>
-    <span class="input-group-text col-5 text-wrap" id="inputGroup-sizing-default2">desc: freq and my callsign at pickup site</span>
-    <div class="input-group-text d-flex col-6 value">
-        <small class="" id="inputGroup-sizing-default2">freq</small>
-        <input type="text" class="form-control " aria-label="Default" aria-describedby="inputGroup-sizing-default">
-        <small class="" id="inputGroup-sizing-default2">callsign</small>
-        <input type="text" class="form-control " aria-label="Default" aria-describedby="inputGroup-sizing-default">
-    </div>
-</div>
-
-<div class="input-group mb-3">
-    <span class="input-group-text " id="inputGroup-sizing-default1">Line2</span>
-    <span class="input-group-text " id="inputGroup-sizing-default2">Freq and callsign at pickup site MGRS</span>
-    <input type="text" class="form-control " aria-label="Default" aria-describedby="inputGroup-sizing-default">
 </div>
 
 
 
-<div class="input-group">
-    <label class="input-group-text" id="">First and last name</label>
-    <input type="text" placeholder="a" class="form-control" id="ss1" name="1">
-    <input type="text" placeholder="a" class="form-control" id="ss2" name="2">
-</div>
+
