--- a/radio-operator-toolbox-angular/src/app/components/report-page/report-page.component.html
+++ b/radio-operator-toolbox-angular/src/app/components/report-page/report-page.component.html
@@ -3,13 +3,13 @@
 
 <div *ngFor="let line of report.lines" class="input-group mb-3 report-lines">
     <div class="input-group-text col-1 text-wrap line-header" id="inputGroup-sizing-default1">
-        {{line.lineHeader}}</div>
+        {{line.lineHeader | uppercase}}</div>
 
 
     <div class="input-group-text col-11 text-wrap align-content-start d-flex flex-column p-0"
         id="inputGroup-sizing-default2">
         <div class="line-desc p-1">
-            <div class="desc-header">{{line.descriptionHeader}}</div>
+            <div class="desc-header">{{line.descriptionHeader | uppercase}}</div>
             <div *ngFor="let linedesc of line.descriptionLines" class="desc-content-line">{{linedesc}}</div>
         </div>
 
@@ -17,10 +17,14 @@
             'flex-column': line.lineValues.length<=2,
             'flex-row': line.lineValues.length>2,
             }">
-            <div *ngFor="let lineValue of line.lineValues" class="d-flex m-1">
+            <div *ngFor="let lineValue of line.lineValues" class="d-flex m-1 align-items-center">
                 <small class="line-value-label" id="inputGroup-sizing-default2">{{lineValue.label}}</small>
                 <input [(ngModel)]="lineValue.value" type="number" class="form-control "
-                    [ngClass]="{'line-value-short':lineValue.valueSize === lineValueSizes.short}" aria-label="Default"
+                    [ngClass]="{
+                        'line-value-short':lineValue.valueSize === lineValueSizes.short,
+                        'line-value-medium':lineValue.valueSize === lineValueSizes.medium,
+                        'line-value-long':lineValue.valueSize === lineValueSizes.long,
+                        }" aria-label="Default"
                     aria-describedby="inputGroup-sizing-default">
             </div>
         </div>
