--- a/radio-operator-toolbox-angular/src/app/tabs/home-tab/home-tab.component.html
+++ b/radio-operator-toolbox-angular/src/app/tabs/home-tab/home-tab.component.html
@@ -17,14 +17,8 @@
 
 <div class="mb-3">
     <label for="myvar" class="form-label">myvar</label>
-    <input [(ngModel)]="myvar"
-        type="text"
-        class="form-control"
-        name=""
-        id="myvar"
-        aria-describedby="helpId"
-        placeholder=""
-    />
+    <input [(ngModel)]="myvar" type="text" class="form-control" name="" id="myvar" aria-describedby="helpId"
+        placeholder="" />
     <small id="helpId" class="form-text text-muted">Help text</small>
 </div>
 
@@ -37,3 +31,7 @@
 </button>
 
 <p>{{myvar}}</p>
+
+
+
+
