satrt with generate

--- a/radio-operator-toolbox-angular/src/app/components/report-page/report-page.component.scss
+++ b/radio-operator-toolbox-angular/src/app/components/report-page/report-page.component.scss
@@ -1,9 +1,15 @@
+.report-header{
+    justify-content: center;
+    font-weight: bolder;
+    font-size: 2em;
+    background-color: rgb(0, 212, 0);
+}
 .report-lines {
 
     .line-header {
         justify-content: center;
         font-weight: bolder;
-        color: red;
+        font-size: 2em;
     }
 
     .line-desc {
