--- a/radio-operator-toolbox-angular/src/app/components/report-page/report-page.component.html
+++ b/radio-operator-toolbox-angular/src/app/components/report-page/report-page.component.html
@@ -1,4 +1,8 @@
-<p>{{report.name}}</p>
+<div class="input-group mb-3">
+    <div class="input-group-text col-12 text-wrap report-header" id="inputGroup-sizing-default1">
+        {{report.name | uppercase}} Creator</div>
+</div>
+
 
 
 <div *ngFor="let line of report.lines" class="input-group mb-3 report-lines">
@@ -19,16 +23,24 @@
             }">
             <div *ngFor="let lineValue of line.lineValues" class="d-flex m-1 align-items-center">
                 <small class="line-value-label me-1" id="inputGroup-sizing-default2">{{lineValue.label}}</small>
-                <input [(ngModel)]="lineValue.value" type="number" class="form-control "
-                    [ngClass]="{
+                <input [(ngModel)]="lineValue.value" type="number" class="form-control " [ngClass]="{
                         'line-value-short':lineValue.valueSize === lineValueSizes.short,
                         'line-value-medium':lineValue.valueSize === lineValueSizes.medium,
                         'line-value-long':lineValue.valueSize === lineValueSizes.long,
-                        }" aria-label="Default"
-                    aria-describedby="inputGroup-sizing-default">
+                        }" aria-label="Default" aria-describedby="inputGroup-sizing-default">
             </div>
         </div>
     </div>
 
-
 </div>
+
+
+<div class="card m-1">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <h6 class="card-subtitle mb-2 text-muted ">Card subtitle</h6>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    b5
+  </div>
+</div>
+
