--- a/radio-operator-toolbox-angular/src/app/core-components/nav-bar/nav-bar.component.html
+++ b/radio-operator-toolbox-angular/src/app/core-components/nav-bar/nav-bar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar sticky-top aanavbar-expand-xxl navbar-dark bg-dark justify-content-center py-0 px-1">
+<nav class="navbar sticky-top anavbar-expand-xxl navbar-dark bg-dark justify-content-center py-0 px-1">
     <div class="content d-flex justify-content-between flex-wrap">
 
         <div class="d-flex align-items-center">
