--- a/radio-operator-toolbox-angular/src/styles.scss
+++ b/radio-operator-toolbox-angular/src/styles.scss
@@ -28,6 +28,7 @@ img {
 .btn {
     margin: 2px;
     padding: 2px;
+    box-shadow: 4px 4px 6px 1px rgb(75, 75, 75);
 }
 
 .card {
@@ -48,6 +49,11 @@ img {
 
 .input-group-text {
     background-color: #e9e9e9;
+    box-shadow: 4px 4px 6px 1px rgb(75, 75, 75);
+}
+
+.form-control {
+    box-shadow: 4px 4px 6px 1px rgb(75, 75, 75);
 }
 
 select {
@@ -62,15 +68,15 @@ select {
     color: black;
 }
 
-.form-label{
+.form-label {
     margin-bottom: 0px;
 }
 
-.invalid-input{
+.invalid-input {
     color: red;
 }
 
-.valid-input{
+.valid-input {
     color: green;
 }
 
